[tool.poetry]
name = "pagination"
version = "0.1.0"
description = ""
authors = ["Roshawn Brooks <69084474+rbrooks95@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-pagination = "^0.12.13"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
python-dotenv = "^1.0.0"
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^2.5.2"
alembic = "^1.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
